--- a/client/src/components/Focus/Focus.module.css
+++ b/client/src/components/Focus/Focus.module.css
@@ -14,8 +14,8 @@
 .card {
   padding-top: 35px 20px;
   margin: 1px;
-  border-bottom: 3px solid #323232;
-  border-right: 3px solid #323232;
+  border-bottom: 3px solid #696969;
+  border-right: 3px solid #696969;
   box-sizing: border-box;
   border-radius: 15px;
   background: #e5e1f5;
@@ -26,10 +26,8 @@
   transition: all 0.3s ease 0s !important;
 }
 .card:hover {
-  box-shadow: 2px 2px;
   background: rgba(189, 189, 189, 0);
   opacity: 0.7;
-  border: none;
   transform: scale(1.1) !important;
 }
 .card img {
