--- a/client/src/components/NavigationItems/NavigationItem/NavigationItem.module.css
+++ b/client/src/components/NavigationItems/NavigationItem/NavigationItem.module.css
@@ -17,7 +17,7 @@
   color: whitesmoke;
   border-bottom: 3px solid #ccc;
   padding-bottom: 13px;
-  letter-spacing: 1.1px;
+  /* letter-spacing: 1.1px; */
 }
 
 .active {
